# surrealdb-start

./: Cargo.toml  README.md
src/: main.rs
src/model/: mod.rs
