[package]
name = "surrealdb-start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# For smaller dependency
surrealdb = { version = "1.0.0", default-features = false, features = ['kv-mem']}

tokio = { version = "1.0", features = ['full']}
anyhow = "1"

# serialize and deserialize
serde = { version = "1.0", features = ['derive']}
